--- a/style.css
+++ b/style.css
@@ -28,6 +28,10 @@ html::-webkit-scrollbar-thumb {
   border-radius: 5rem;
 }
 
+section {
+  padding: 3rem 9%;
+}
+
 body {
   background: #14242c;
   overflow-x: hidden;
@@ -90,6 +94,28 @@ body {
   display: none;
 }
 
+.home {
+  margin: 0 auto;
+  margin-top: 9rem;
+  width: 90%;
+  border-radius: 1rem;
+  background: url(images/ocean.png) no-repeat;
+  background-size: cover;
+  background-position: center;
+  display: flex;
+}
+
+@media (max-width: 991px) {
+  html {
+    font-size: 55%;
+  }
+  .header {
+    padding: 1.5rem 2rem;
+  }
+  section {
+    padding: 3rem 2rem;
+  }
+}
 @media (max-width: 768px) {
   #menu-btn {
     display: inline-block;
