--- a/style.scss
+++ b/style.scss
@@ -269,6 +269,7 @@ body{
     align-items: center;
     flex-wrap: wrap;
     gap: 2rem;
+    margin-top: 5rem;
 
     .video-files{
         flex:1 1 42rem;
