--- a/armas-j-losparaiso/style.css
+++ b/armas-j-losparaiso/style.css
@@ -258,4 +258,144 @@ body {
   font-size: 1rem;
   color: #5633e3;
   line-height: 1;
+}
+
+body {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+  font-family: "Lato", sans-serif;
+  margin: 0;
+}
+
+.music-container {
+  background-color: rgba(28, 37, 135, 0.4);
+  border-radius: 80px;
+  box-shadow: 0 20px 20px 0 rgba(53, 49, 112, 0.693);
+  display: flex;
+  padding: 10px 20px;
+  position: relative;
+  margin: 90px 0;
+  z-index: 10;
+}
+
+.img-container {
+  position: relative;
+  width: 86px;
+}
+
+.img-container::after {
+  content: "";
+  background-color: rgba(28, 37, 135, 0.4);
+  border-radius: 100%;
+  position: absolute;
+  bottom: 100%;
+  left: 50%;
+  width: 20px;
+  height: 20px;
+  transform: translate(-50%, 50%);
+}
+
+.img-container img {
+  border-radius: 79%;
+  -o-object-fit: cover;
+     object-fit: cover;
+  height: 85px;
+  width: inherit;
+  position: absolute;
+  bottom: 0;
+  left: 0;
+  -webkit-animation: rotate 3s linear infinite;
+          animation: rotate 3s linear infinite;
+  -webkit-animation-play-state: paused;
+          animation-play-state: paused;
+}
+
+.music-container.play .img-container img {
+  -webkit-animation-play-state: running;
+          animation-play-state: running;
+}
+
+@-webkit-keyframes rotate {
+  from {
+    transform: rotate(0deg);
+  }
+  to {
+    transform: rotate(360deg);
+  }
+}
+
+@keyframes rotate {
+  from {
+    transform: rotate(0deg);
+  }
+  to {
+    transform: rotate(360deg);
+  }
+}
+.navigation {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  z-index: 1;
+}
+
+.action-btn {
+  background-color: rgba(28, 37, 135, 0.4);
+  border: 0;
+  color: #5633e3;
+  font-size: 10px;
+  cursor: pointer;
+  padding: 5px;
+  margin: 0 20px;
+}
+
+.action-btn.action-btn-big {
+  color: rgba(190, 64, 64, 0.4);
+  font-size: 25px;
+}
+
+.action-btn:focus {
+  outline: 0;
+}
+
+.music-info {
+  background-color: rgba(255, 255, 255, 0.5);
+  border-radius: 15px 15px 0 0;
+  position: absolute;
+  top: 0;
+  left: 20px;
+  width: calc(100% - 40px);
+  padding: 10px 10px 10px 150px;
+  opacity: 0;
+  transform: translateY(0%);
+  transition: transform 0.3s ease-in, opacity 0.3s ease-in;
+  z-index: 0;
+}
+
+.music-container.play .music-info {
+  opacity: 1;
+  transform: translateY(-100%);
+}
+
+.music-info h4 {
+  margin: 0;
+}
+
+.progress-container {
+  background: #fff;
+  border-radius: 5px;
+  cursor: pointer;
+  margin: 10px 0;
+  height: 4px;
+  width: 100%;
+}
+
+.progress {
+  background-color: #5633e3;
+  border-radius: 5px;
+  height: 100%;
+  width: 0%;
+  transition: width 0.1s linear;
 }/*# sourceMappingURL=style.css.map */
