--- a/lumelay-lumuelle-AutoTrack/css/main.css
+++ b/lumelay-lumuelle-AutoTrack/css/main.css
@@ -11,3 +11,177 @@
 @import "midbanner.css";
 @import "botbanner.css";
 @import "newsletter.css";
+
+/** Assets **/
+.section-p1{
+  padding: 40px 80px;
+}
+
+.section-m1 {
+  margin: 40px 0;
+}
+
+button.normal{
+  margin: 14px; padding: 15px 30px;
+  cursor: pointer;
+  transition: 0.2s;
+
+  font-family: 'Montserrat', sans-serif;
+  font-weight: 600;
+  color: var(--black);
+
+  background-color: var(--white);
+
+  border-radius: 4px;
+  border: none;
+  outline: none;
+}
+
+/* colors */
+:root{
+  --black:#080808;
+  --black-highlight:#1c1c1c;
+  --red:#e60000;
+  --red-highlight:#ff3131;
+  --red-hover:#ff5a5a;
+  --pink:#ff9c9c;
+  --white:#f0f0f0;
+  --gold:#c19e00;
+
+  --nav-bar:#fff;
+  --box-shadow: 0 .5rem 1rem rgba(0, 0, 0, 0.1);
+  --border: .2rem solid rgba(0, 0, 0, 0.1);
+  --outline: .1rem solid rgba(0, 0, 0, 0.1);
+  --outline-hover: .2rem solid var(--black);
+
+  --shadow: 20px 20px 30px rgba(0, 0, 0, 0.02);
+  --shadow-hover: 20px 20px 30px rgba(0, 0, 0, 0.06);
+  --border-line:#8e8e8e;
+}
+
+*{
+  font-family: 'Montserrat', sans-serif;
+  margin: 0;
+  padding: 0;
+  box-sizing: border-box;
+  outline: none;
+  border: none;
+  text-decoration: none;
+  transition: all .2s linear;
+}
+
+html{
+  font-size: 62.5%;
+  overflow-x: hidden;
+  scroll-behavior: smooth;
+  scroll-padding-top: 7rem;
+}
+
+body{
+  width: 100%;
+  background: var(--nav-bar);
+}
+
+/* media query*/
+@media screen and (max-width: 1280px){
+
+/** NavBar (responsive) section**/
+html{
+  font-size: 58%;
+  }
+
+.header{
+  padding: 2.2rem;
+  }
+/* -end- */
+
+/** Banner section**/
+#banner {
+    background-position: top 30% right 30%;
+    height: 80vh;
+    padding: 0 80px;
+  }
+/* -end- */
+}
+
+@media screen and (max-width: 1100px){
+
+/** NavBar (responsive) section**/
+#menu-btn{
+    display: inline-block;
+  }
+
+.header .search-form{
+  width: 90%;
+}
+
+.header .navbar{
+  position: absolute;
+  top: 110%; right: -110%;
+  width: 40rem;
+  height: 45rem;
+
+  border-radius: .5rem;
+  box-shadow: var(--box-shadow);
+  background: var(--nav-bar);
+  }
+
+.header .navbar.active{
+  right: 2rem;
+  transition: 0.7s ease-out;
+  }
+
+.header .navbar a{
+  margin:4rem 3.5rem;
+
+  font-size: 2.2rem;
+  display: block;
+  }
+/* -end- */
+
+/** Banner section**/
+#banner {
+    background-position: top 30% right 40%;
+    padding: 0 70px;
+  }
+/* -end- */
+
+}
+
+/*Tablet*/
+@media screen and (max-width: 799px){
+  /** Banner section**/
+  #banner {
+      background-position: top 30% right 45%;
+      height: 65vh;
+      padding: 0 80px;
+    }
+
+    .banner h2{
+      font-size: 6.5rem;
+    }
+
+    .banner .text-banner{
+      font-size: 8rem;
+    }
+  /* -end- */
+
+  /** Latest Product **/
+  #product1 .product-container {
+    display: flex;
+    justify-content: space-between;
+    padding-top: 20px;
+    flex-wrap: wrap;
+    }
+    /* -end- */
+}
+
+/*Mobile*/
+@media screen and (max-width: 450px){
+
+html{
+  font-size: 50%;
+  }
+}
+
+/* Main page */
