--- a/lumelay-lumuelle-AutoTrack/css/banner.css
+++ b/lumelay-lumuelle-AutoTrack/css/banner.css
@@ -1,32 +1,31 @@
 #banner{
   background: url(../assets/img/RE-V7Banner.jpg);
-  background-position: top 25% right 0;
   background-size: cover;
+  background-position: top 25% right 0;
+  height: 90vh; width: 100%;
 
-  height: 90vh;
-  width: 100%;
   padding: 0 80px;
   display: flex;
   align-items: flex-start;
   flex-direction: column;
   justify-content: center;
-
 }
 
-.banner h2{
-  font-size: 8.5rem;
-  font-weight: 700;
-  font-family: 'Source Sans Pro', sans-serif;
-
+#banner h4{
+  padding-bottom: 5px;
+  font-weight: 800; font-size: 20px;
   color: var(--black-highlight);
+  font-family: 'Source Sans Pro', sans-serif;
 }
 
-.banner .text-banner{
-  font-size: 10rem;
-  font-weight: 700;
-  font-family: 'Source Sans Pro', sans-serif;
-
+#banner h2{
   color: var(--black-highlight);
+  font-family: 'Source Sans Pro', sans-serif;
+}
+
+#banner h1{
+  color: var(--red);
+  padding-bottom: 10px;
 }
 
 #banner button{
@@ -37,7 +36,7 @@
 
   font-family: 'Source Sans Pro', sans-serif;
   font-weight: 600;
-  font-size: 2rem;
+  font-size: 1rem;
 
   color: var(--white);
   cursor: pointer;
@@ -45,7 +44,7 @@
 
 #banner button i{
   margin-left: 5px;
-  font-size: 1.5rem;
+  font-size: 0.9rem;
 }
 
 #banner button:hover{
