--- a/lumelay-lumuelle-AutoTrack/css/main.css
+++ b/lumelay-lumuelle-AutoTrack/css/main.css
@@ -7,20 +7,12 @@
 
 /** main page styles **/
 @import "banner.css";
-@import "latest.css";
+@import "product.css";
 @import "midbanner.css";
 @import "botbanner.css";
 @import "newsletter.css";
 
 /** Assets **/
-.section-p1{
-  padding: 40px 80px;
-}
-
-.section-m1 {
-  margin: 40px 0;
-}
-
 button.normal{
   margin: 14px; padding: 15px 30px;
   cursor: pointer;
@@ -46,7 +38,6 @@ button.normal{
   --red-hover:#ff5a5a;
   --pink:#ff9c9c;
   --white:#f0f0f0;
-  --gold:#c19e00;
 
   --nav-bar:#fff;
   --box-shadow: 0 .5rem 1rem rgba(0, 0, 0, 0.1);
@@ -61,8 +52,7 @@ button.normal{
 
 *{
   font-family: 'Montserrat', sans-serif;
-  margin: 0;
-  padding: 0;
+  margin: 0; padding: 0;
   box-sizing: border-box;
   outline: none;
   border: none;
@@ -70,118 +60,57 @@ button.normal{
   transition: all .2s linear;
 }
 
-html{
-  font-size: 62.5%;
-  overflow-x: hidden;
-  scroll-behavior: smooth;
-  scroll-padding-top: 7rem;
-}
-
 body{
   width: 100%;
   background: var(--nav-bar);
 }
 
-/* media query*/
-@media screen and (max-width: 1280px){
-
-/** NavBar (responsive) section**/
-html{
-  font-size: 58%;
-  }
-
-.header{
-  padding: 2.2rem;
-  }
-/* -end- */
-
-/** Banner section**/
-#banner {
-    background-position: top 30% right 30%;
-    height: 80vh;
-    padding: 0 80px;
-  }
-/* -end- */
+.section-p1{
+  padding: 40px 80px;
 }
 
-@media screen and (max-width: 1100px){
-
-/** NavBar (responsive) section**/
-#menu-btn{
-    display: inline-block;
-  }
-
-.header .search-form{
-  width: 90%;
+.section-m1 {
+  margin: 40px 0;
 }
 
-.header .navbar{
-  position: absolute;
-  top: 110%; right: -110%;
-  width: 40rem;
-  height: 45rem;
-
-  border-radius: .5rem;
-  box-shadow: var(--box-shadow);
-  background: var(--nav-bar);
-  }
-
-.header .navbar.active{
-  right: 2rem;
-  transition: 0.7s ease-out;
-  }
-
-.header .navbar a{
-  margin:4rem 3.5rem;
-
-  font-size: 2.2rem;
-  display: block;
-  }
-/* -end- */
-
-/** Banner section**/
-#banner {
-    background-position: top 30% right 40%;
-    padding: 0 70px;
-  }
-/* -end- */
-
+h1 {
+  font-size: 50px;
+  line-height: 64px;
 }
 
-/*Tablet*/
-@media screen and (max-width: 799px){
-  /** Banner section**/
-  #banner {
-      background-position: top 30% right 45%;
-      height: 65vh;
-      padding: 0 80px;
-    }
+h2 {
+  font-size: 50px;
+  line-height: 64px;
+}
 
-    .banner h2{
-      font-size: 6.5rem;
-    }
+h4 {
+  font-size: 20px;
+}
 
-    .banner .text-banner{
-      font-size: 8rem;
-    }
-  /* -end- */
+h6 {
+  font-weight: 700;
+  font-size: 12px;
+}
 
-  /** Latest Product **/
-  #product1 .product-container {
+p {
+  font-size: 16px;
+  margin: 15px 0 20px 0;
+  font-family: 'Source Sans Pro', sans-serif;
+  color: var(--back-highlight);
+}
+
+/** Media Query **/
+
+@media screen and (max-width:1100px){
+  #navbar {
     display: flex;
-    justify-content: space-between;
-    padding-top: 20px;
-    flex-wrap: wrap;
-    }
-    /* -end- */
+    flex-direction: column;
+    align-items: flex-start;
+    justify-content: flex-start;
+
+    position: fixed;
+    right: 0px; top: 0;
+    height: 100vh; width: 300px;
+    background-color: var(--nav-bar);
+    box-shadow: 0 40px 60px var(--box-shadow);
 }
-
-/*Mobile*/
-@media screen and (max-width: 450px){
-
-html{
-  font-size: 50%;
-  }
-}
-
-/* Main page */
