--- a/ardales-c-PixelArtGallery/style.css
+++ b/ardales-c-PixelArtGallery/style.css
@@ -181,7 +181,7 @@ nav button {
 
 /* 
 =============================================================
-FEATURED
+CATEGORY BUTTON
 =============================================================
 */
 
@@ -198,4 +198,55 @@ FEATURED
 
 .category__button:hover {
     color: var(--color-white);
+}
+
+/* 
+=============================================================
+GENERAL POST
+=============================================================
+*/
+
+.post__thumbnail {
+    border-radius: var(--card-border-radius-5) 0;
+    border: 1rem solid var(--color-gray-900);
+    overflow: hidden;
+    margin-bottom: 1.6rem;
+}
+
+.post:hover .post__thumbnail img {
+    filter: saturate(0);
+    transition: filter 500ms ease;
+}
+
+.post__author {
+    display: flex;
+    gap: 1rem;
+    margin-top: 1.2rem;
+}
+
+.post__author-avatar {
+    width: 2.5rem;
+    height: 2.5rem;
+    border-radius: var(--card-border-radius-3);
+    overflow: hidden;
+}
+
+/* 
+=============================================================
+FEATURED
+=============================================================
+*/
+
+.featured {
+    margin-top: 8rem;
+}
+
+.featured__container {
+    display: grid;
+    grid-template-columns: 1fr 1fr;
+    gap: 4rem;
+}
+
+.featured .post__thumbnail {
+    height: fit-content;
 }
