--- a/ardales-c-PixelArtGallery/style.css
+++ b/ardales-c-PixelArtGallery/style.css
@@ -250,3 +250,72 @@ FEATURED
 .featured .post__thumbnail {
     height: fit-content;
 }
+
+/* 
+=============================================================
+POSTS
+=============================================================
+*/
+
+.posts__container {
+    display: grid;
+    grid-template-columns: repeat(3, 1fr);
+    gap: 5rem;
+    margin-bottom: 5rem;
+}
+
+/* 
+=============================================================
+CATEGORY BUTTONS
+=============================================================
+*/
+
+.category__buttons {
+    padding: 4rem 0;
+    border-top: 2px solid var(--color-gray-900);
+    border-bottom: 2px solid var(--color-gray-900);
+}
+
+.category__buttons-container {
+    width: fit-content;
+    display: grid;
+    grid-template-columns: repeat(3, 1fr);
+    gap: 1rem;
+}
+
+/* 
+=============================================================
+FOOTER
+=============================================================
+*/
+
+footer {
+    background: var(--color-gray-900);
+    padding: 5rem 0 0;
+    box-shadow: inset 0 1.5rem 1.5rem rgba(0, 0, 0, 0.2);
+}
+
+.footer__socials {
+    margin-inline: auto;
+    width: fit-content;
+    margin-bottom: 5rem;
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    gap: 1.2rem;
+}
+
+.footer__socials a {
+    background: var(--color-bg);
+    border-radius: 50%;
+    width: 2.3rem;
+    height: 2.3rem;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+}
+
+.footer__socials a:hover {
+    background: var(--color-white);
+    color: var(--color-bg);
+}
