--- a/lumelay-lumuelle-AutoTrack/css/main.css
+++ b/lumelay-lumuelle-AutoTrack/css/main.css
@@ -57,7 +57,6 @@ button.normal{
   outline: none;
   border: none;
   text-decoration: none;
-  transition: all .2s linear;
 }
 
 body{
@@ -109,8 +108,42 @@ p {
     justify-content: flex-start;
 
     position: fixed;
-    right: 0px; top: 0;
+    right: -300px; top: 0;
     height: 100vh; width: 300px;
     background-color: var(--nav-bar);
     box-shadow: 0 40px 60px var(--box-shadow);
+
+    padding: 80px 0 0 10px;
+    transition: 0.3s;
+}
+
+  #navbar.active{
+    right: 0px;
+  }
+
+  #navbar li {
+    margin-bottom: 25px;
+  }
+
+  #nav-mobile{
+    display: flex;
+    align-items: center;
+  }
+
+  #nav-mobile i{
+    color: var(--black);
+    font-size: 24px;
+    padding-left: 20px;
+  }
+
+  #close{
+    position: absolute;
+    top: 30px; left: 30px;
+    color: var(--black);
+    font-size: 24px;
+  }
+
+  #icons {
+    display: none;
+  }
 }
