--- a/lumelay-lumuelle-AutoTrack/css/newsletter.css
+++ b/lumelay-lumuelle-AutoTrack/css/newsletter.css
@@ -8,7 +8,6 @@
   background-position: 40% 50%;
   background-color: var(--black-highlight);
 }
-
 #newsletter h4{
   color: var(--white);
   font-weight: 700; font-size: 22px;
@@ -29,7 +28,7 @@
 }
 
 #newsletter input{
-  height: 3rem; padding: 0em 1.25em;
+  /*height: 3.125rem;*/ padding: 0em 1.25em;
   width: 100%;
   font-size: 14px; font-family: 'Source Sans Pro', sans-serif;
   border: 1px solid transparent; border-radius: 4px;
@@ -44,5 +43,5 @@ white-space: nowrap;
 
 border: none; border-radius: 4px;
 border-top-left-radius: 0; border-bottom-left-radius: 0;
-outline: none;
+outline: none; margin: 0px;
 }
