--- a/lumelay-lumuelle-AutoTrack/css/botbanner.css
+++ b/lumelay-lumuelle-AutoTrack/css/botbanner.css
@@ -24,6 +24,7 @@ button.white{
   transition: none;
 }
 
+/* medium banner*/
 #sm-banner{
   display: flex; flex-wrap: wrap;
   justify-content: space-between;
@@ -34,7 +35,7 @@ button.white{
   justify-content: center; align-items: flex-start;
   background-image: url("../assets/img/minibanner-one.jpg");
   background-size: cover; background-position: center;
-  min-width: 850px;
+  min-width: 850px; /** 580px in responsive [too small for my monitor] **/
   height: 50vh;
 
   padding: 30px;
@@ -91,13 +92,13 @@ button.white{
 
 #banner-three h2{
   color: var(--white);
-  font-size: 30px; font-weight: 900;
+  font-size: 30px; /* 22px */ font-weight: 900;
 }
 
 #banner-three h3{
   color: var(--white);
   font-weight: 700; font-family: 'Source Sans Pro', sans-serif;
-  font-size: 18px;
+  font-size: 18px; /* 15px */
 }
 
 #banner-three .banner-box-four h2{
