--- a/css/style.css
+++ b/css/style.css
@@ -6,10 +6,12 @@
    box-sizing: border-box;
    outline: none; border:none;
    text-decoration: none;
+   scroll-behavior: smooth;
 }
 
 body{
    min-height: 100vh;
+   overflow-x: hidden;
    background:#222054;
 }
 
@@ -64,31 +66,8 @@ position: relative;
 width: 100%;
 height: 100vh;
 padding: 100px;
-}
 
-section::before{
-   content: '';
-   position: absolute;
-   top: 0;
-   left: 0;
-   width: 100%;
-   height: 100px;
-   background: linear-gradient(to bottom, #1c0522, transparent);
-   z-index: 1000;
 }
-
-section::after{
-   content: '';
-   position: absolute;
-   top: 799px;
-   bottom: 0;
-   left: 0;
-   width: 100%;
-   height: 100px;
-   background: linear-gradient(to bottom, #222054,#1c1953, transparent);
-   z-index: 1000;
-}
-
 
 
 section img{
@@ -98,19 +77,17 @@ section img{
    width: 100%;
    height: 100%;
    object-fit: cover;
+   pointer-events: none;
 }
 
 section img#moon{
    mix-blend-mode: screen;
 }
-
-.sec{
-   position: relative;
-   padding: 100px;
+section img#road9{
+   z-index: 10;
 }
-
-.sec p{
-
+section img#car10{
+   z-index: 10;
 }
 
 
@@ -136,15 +113,6 @@ section img#moon{
 
 
 
-
-.container{
-   min-height: 100vh;
-   display: flex;
-   align-items: center;
-   justify-content: center;
-   text-align: center;
-   padding-bottom: 80px;
-}
 
 
 .front-container{
@@ -205,16 +173,32 @@ section img#moon{
    text-align: center;
    padding-bottom: 80px;
 }
+/********** Container (login/out/register) **********/
 
 .form-container form{
-   width: 500px;
-   background-color: rgba(255, 255, 255, 0);
-   border:2px solid rgba(0, 0, 0, 0);
-   padding:20px;
-   text-align: center;
+   width: 350px;
+   border-radius: 30px;
+   color: #7a7a7a;
+   box-shadow: 
+   -10px -10px 15px rgba(255,255,255,0.5),
+   10px -10px 15px rgba(70,70,70,0.12),
+   inset -10px -10px 15px rgba(255,255,255,0.5),
+   inset 10px -10px 15px rgba(70,70,70,0.12);
+   position: absolute;
+   transform: translate(-50%, -50%);
+   top: 50%;
+   left: 50%;
+   scroll-behavior: unset;
+   
+ 
+
 }
 
-
+.form-container img{
+   width: 100px;
+   height: 100px;
+   margin-top: 10px;
+}
 
 .form-container form .title{
    font-size: 20px;
@@ -301,3 +285,97 @@ section img#moon{
    font-size: 30px;
  }
  
+ /********** Container (home dog cat) **********/
+
+ .container{
+	position: absolute;
+   top: 50%;
+   left: 50%;
+   transform: translate(-50%, -50%);
+	width:1100px;
+	display: flex;
+	justify-content: center;
+	align-items: center;
+	padding: 30px;
+	margin-top: 2%;
+
+}
+
+.container .card{
+	width:308px;
+	position: relative;
+	height: 350px;
+	background: #f0f0f0;
+   border-radius: 30px;
+	margin:30px 10px;
+	padding: 20px 15px;
+
+	flex-direction: column;
+	box-shadow: 0.5px 10px #e6e6e6;
+	transition:0.3s ease-in-out;
+	margin-top: 5%;
+   
+}
+.container .card .imgBx{
+	position: relative;
+	width:260px;
+	height: 260px;
+	top: -60px;
+	left:20px;
+	box-shadow: 0 5px 20px rbga (0,0,0,1.2);
+
+}
+
+.container .card .imgBx img
+{
+	max-width: 100%;
+	border-radius: 10px;
+}
+
+.imgBx:hover img{
+	transform: scale(1.1);
+}
+
+/********** Container (home 2nd container) **********/
+
+.container .home-btn{ 
+   font-size: 20px;
+   font-weight: 300;
+   padding: 20px;
+   width: 150px;
+   margin: 20px;
+   margin-left: 22%;
+   margin-top: 37%;
+   position: absolute;
+   top: 50%;
+   -ms-transform: translateY(-50%);
+   transform: translateY(-50%);
+   background: #ebeef1;
+   cursor: pointer;
+   border: none;
+   border-radius: 30px;
+   color: rgb(85, 115, 170);
+   box-shadow: 10px 10px 10px -1px rgba(10,99,169,0.16),
+               -10px -10px 10px -1px rgba(255,255,255,0.70);
+}
+
+.container .home-btn:hover{
+   box-shadow: inset 10px 10px 10px -1px rgba(10,99,169,0.16),
+                inset -10px -10px 10px -1px rgba(255,255,255,0.70);
+}
+
+
+
+.column{
+   float:left;
+   width: 33.33%;
+   padding: 5px;
+   margin-top: 150px;
+}
+.row::after{
+   content:"";
+   display: table;
+   clear: both;
+}
+
+
