--- a/lumelay-lumuelle-AutoTrack/css/login.css
+++ b/lumelay-lumuelle-AutoTrack/css/login.css
@@ -1,4 +1,3 @@
-
 #login-container{
   min-height: 100vh;
   display: flex; align-items: center;
@@ -9,8 +8,8 @@
 
 #login-container .forms{
   position: relative;
-  margin-top: 30px; max-width: 430px;
-  width: 100%; padding: 25px;
+  max-width: 430px; padding: 25px;
+  width: 100%;
   border-radius: 8px;
 
   background-color: #fff;
@@ -20,21 +19,19 @@
 #login-container h2{
   position: relative;
   color: var(--black);
-
-  font-family: 'Montserrat', sans-serif;
-  font-size: 3.8rem; font-weight: 700;
+  font-size: 36px; font-weight: 700;
 }
 
 #login-container input{
   position: relative;
-  height: 5rem; width: 100%;
+  height: 100%; width: 100%;
   margin-top: 3rem;
 
   border-bottom: 2px solid var(--border-line);
   border-top: 2px solid transparent;
 
   font-family: 'Source Sans Pro', sans-serif;
-  font-size: 1.5rem; font-weight: 600;
+  font-size: 20px; font-weight: 600;
 
   transition: all 0.2s ease;
 }
@@ -69,12 +66,15 @@
   display: flex; justify-content: space-between;
   margin-top: 1.85rem;
 
-  font-size: 1.38rem;
+  font-size: 15px;
 }
 
 .login-text-container p{
   color: var(--black);
   font-family: 'Source Sans Pro', sans-serif;
+  font-size: 15px;
+
+  margin: 0;
 }
 
 .login-text-container a{
